# maverick

./: environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
maverick/: __init__.py  combine_bin_cli.py  event_hander.py  export.py  initialization.py  maverick.py  maverick_combine_and_bin_cli.py  maverick_combine_cli.py
maverick/combine/: combine.py  combine_cli.py  event_handler.py
maverick/export/: export.py  export_bin_table.py  export_images.py  utilities.py
maverick/load/: load_bin_table.py  load_files.py
maverick/log/: log_launcher.py
maverick/session/: __init__.py  load_previous_session_launcher.py  session_handler.py
maverick/test/: test_maverick_combine_cli.py
maverick/ui/: mainWindow.ui
maverick/utilities/: __init__.py  file_handler.py  get.py  math_tools.py  table_handler.py  time_spectra.py
test/integration/: maverick_combine_cli.py
test/unit/: test_maverick_combine_cli.py
